--- a/css/main.css
+++ b/css/main.css
@@ -11,10 +11,14 @@ h1 {
     font-size: 4rem;
 }
 
+h2 {
+    font-size: 2rem;
+}
+
 header {
     display: flex;
     justify-content: space-between;
-    height: 100vh;
+    height: 99.1vh;
 }
 
 a {
@@ -68,6 +72,74 @@ nav a {
     z-index: -1;
 }
 
+section.sponsors {
+    display: flex;
+    justify-content: center;
+    gap: 16rem;
+    align-items: center;
+    height: 5em;
+    margin-left: -0.5em;
+    margin-right: -0.5em;
+    background-color: rgb(240, 240, 240);
+}
+
 .slide-categories {
-    background-color: grey;
+    position: relative;
+    margin-top: 0em;
+    margin-left: -0.5em;
+    margin-right: -0.5em;
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    gap: 9rem;
+}
+
+/*
+.category-description {
+    margin-top: 1em;
+    margin-left: 2em;
+}
+*/
+
+.category-description h1 {
+    margin-top: 1.5em;
+    margin-left: 1em;
+    color: white;
+}
+
+.category-description h2 {
+    margin-top: -1em;
+    margin-left: 2em;
+    color: white;
+}
+
+
+.slide-category-image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 90vh;
+    z-index: -1;
+    /*transform: scaleX(-1);*/
+}
+
+.slide-icon {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 1.5em;
+    margin-right: 1.5em;
+}
+
+.slide-category-image-a {
+    transform: scaleX(-1);
+}
+
+.slide-ellipse {
+    margin-top: 9em;
+    display: flex;
+    justify-content: center;
+    gap: 1.5rem;
 }
