--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 body {
     /*margin: 1.5em;*/
     font-family: 'ABeeZee';
+    overflow-x: hidden;
 }
 
 h1 {
@@ -78,12 +79,13 @@ section.sponsors {
     gap: 16rem;
     align-items: center;
     height: 5em;
+    margin-top: -0.1em;
     margin-left: -0.5em;
     margin-right: -0.5em;
     background-color: rgb(240, 240, 240);
 }
 
-.slide-categories {
+section.slide-categories {
     position: relative;
     margin-top: 0em;
     margin-left: -0.5em;
@@ -93,13 +95,6 @@ section.sponsors {
     flex-direction: column;
     gap: 9rem;
 }
-
-/*
-.category-description {
-    margin-top: 1em;
-    margin-left: 2em;
-}
-*/
 
 .category-description h1 {
     margin-top: 1.5em;
@@ -113,7 +108,6 @@ section.sponsors {
     color: white;
 }
 
-
 .slide-category-image {
     position: absolute;
     top: 0;
@@ -123,7 +117,7 @@ section.sponsors {
     width: 100%;
     height: 90vh;
     z-index: -1;
-    /*transform: scaleX(-1);*/
+    transform: scaleX(-1);
 }
 
 .slide-icon {
@@ -138,8 +132,182 @@ section.sponsors {
 }
 
 .slide-ellipse {
-    margin-top: 9em;
+    margin-top: 2em;
     display: flex;
     justify-content: center;
     gap: 1.5rem;
+}
+
+section.about-us {
+    position: relative;
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+    align-items: center;
+    height: 80vh;
+    gap: 3em;
+    margin-left: -1em;
+    margin-right: -1em;
+    background-color: rgb(240, 240, 240);
+}
+
+
+.about-us-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-basis: 0;
+    margin-top: -4em;
+    margin-left: 20em;
+    width: 35em;
+    height: 35em;
+    
+}
+
+.about-us-content h2 {
+    margin-top: -1.5em;
+}
+
+.paragraph {
+    margin-top: 0em;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+.button {
+    margin-top: 1.5em;
+    width: 8em;
+    height: 2em;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 34px;
+    background-color: #211DBF;
+    color: white;
+}
+
+.about-us-image{
+    text-align: center;
+    margin-right: 15em;
+}
+
+.about-us-image img {
+    width: 27em;
+    height: 27em;
+}
+
+section.why-MW {
+    position: relative;
+    margin-top: -0.1em;
+    margin-left: -1em;
+    margin-right: -1em;
+    height: 90vh;
+    border-top: solid 1px transparent;
+}
+
+.why-image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 90vh;
+    z-index: -1;
+}
+
+.why-MW-reasons {
+    width: 25em;
+    margin-top: 4em;
+    margin-left: 60em;
+}
+
+.why-title h1 {
+    font-size: 2rem;
+    color: white;
+}
+
+.reasons {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+}
+
+.reasons h4 {
+    font-weight: 100;
+    color: white;
+}
+
+.reasons li p {
+    background-color: white;
+    height: 3em;
+    width: 20em;
+    border-radius: 12px;
+    line-height: 45px;
+}
+
+section.discover-MW {
+    border-top: solid 1px transparent;
+    text-align: center;
+    height: 5em;
+    margin-left: -0.5em;
+    margin-right: -0.5em;
+    background-color: rgb(240, 240, 240);
+}
+
+.discover-MW h1 {
+    margin-top: 0.6em;
+    font-size: 2em;
+}
+
+section.comments-section {
+    position: relative;
+    margin-top: -0.1em;
+    margin-left: -0.5em;
+    margin-right: -0.5em;
+    margin-bottom: -1em;
+    height: 90vh;
+    border-top: solid 1px transparent;
+}
+
+.comments-section h1 {
+    margin-top: 1em;
+    margin-left: 1em;
+    color: white;
+}
+
+.comments-image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 90vh;
+    z-index: -1;
+}
+
+.people-comments {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 7em;
+}
+
+.comment {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    height: 20em;
+    width: 12em;
+    border-radius: 12px;
+    background-color: white;
+}
+
+.comment > * {
+    margin-top: 0.5em;
+    margin-left: 1em;
+}
+
+.comment p {
+    text-justify: inter-word;
 }
