--- a/Home Page - Gigs Initial Page/css/main.css
+++ b/Home Page - Gigs Initial Page/css/main.css
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Piedra&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Piedra&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Piedra&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Piedra&display=swap'); */
 
 body {
-    /*margin: 1.5em;*/
     font-family: 'ABeeZee';
+    width: 100vw;
+    margin: 0;
     overflow-x: hidden;
 }
 
@@ -16,10 +17,21 @@ h2 {
     font-size: 2rem;
 }
 
+.container {
+    width: 100vw;
+}
+
 header {
+    background-image: url(../images/hero-image.jpg);
+    background-repeat:no-repeat;
+    background-position: center center;
+    background-size: cover;
+    margin-right: 0;
+    width: 100%;
+    height: 100vh;
     display: flex;
+    align-items: flex-start;
     justify-content: space-between;
-    height: 99.1vh;
 }
 
 a {
@@ -28,8 +40,10 @@ a {
 }
 
 .hero-class {
-    margin-top: 1em;
-    margin-left: 1em;
+    display: flex;
+    align-items: center;
+    padding: 2%;
+
 }
 
 .hero-title {
@@ -39,28 +53,31 @@ a {
 }
 
 .hero-logo {
-    display:inline-block;
-    vertical-align: bottom;
     height: 6em;
     width: 6em;
 }
-
-nav {
-    margin-top: 1em;
-    margin-right: 2em;
+/*
+.hero-class * {
+    flex-basis: 100%;
+}
+*/
+.navigation {
+    align-items: center;
+    text-align: center;
+    padding-top: 1%;
+    padding-right: 3%;
 }
 
 nav ul {
     display: flex;
     gap: 3.5rem;
     list-style-type: none; 
-    padding: 0;
 }
+
 
 nav a {
     color: black;
     font-weight: bold;
-    display: block;
 }
 
 .hero-image {
