--- a/Home Page - Gigs Initial Page/css/main.css
+++ b/Home Page - Gigs Initial Page/css/main.css
@@ -1,11 +1,13 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Piedra&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Piedra&display=swap'); */
-
 body {
     font-family: 'ABeeZee';
     width: 100vw;
     margin: 0;
-    overflow-x: hidden;
+    padding: 0;
+    /*overflow-x: hidden;*/
+}
+
+.container {
+    width: 100vw;
 }
 
 h1 {
@@ -17,8 +19,9 @@ h2 {
     font-size: 2rem;
 }
 
-.container {
-    width: 100vw;
+a {
+    text-decoration: none;
+    font-size: 1.3rem;
 }
 
 header {
@@ -26,23 +29,17 @@ header {
     background-repeat:no-repeat;
     background-position: center center;
     background-size: cover;
-    margin-right: 0;
-    width: 100%;
-    height: 100vh;
+    width: 100vw;
+    min-height: 100vh;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
 }
 
-a {
-    text-decoration: none;
-    font-size: 1.3rem;
-}
-
 .hero-class {
     display: flex;
     align-items: center;
-    padding: 2%;
+    padding: 1.5%;
 
 }
 
@@ -56,52 +53,85 @@ a {
     height: 6em;
     width: 6em;
 }
-/*
-.hero-class * {
-    flex-basis: 100%;
+
+.slide-menu {
+    display: none;
+    margin-top: 0.4em;
+    margin-right: 1em;
+    font-size: 2.5rem;
 }
-*/
-.navigation {
-    align-items: center;
-    text-align: center;
-    padding-top: 1%;
-    padding-right: 3%;
+
+nav {
+    padding: 1.5%;
+    width: 40em;
 }
 
 nav ul {
     display: flex;
-    gap: 3.5rem;
+    padding: 0;
+    margin: 0;
+    justify-content: space-around;
     list-style-type: none; 
 }
 
+nav ul > * {
+    flex-shrink: 0;
+}
 
 nav a {
     color: black;
     font-weight: bold;
 }
 
-.hero-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: -1;
-}
-
-section.sponsors {
+.sponsors {
     display: flex;
-    justify-content: center;
-    gap: 16rem;
+    justify-content: space-around;
     align-items: center;
-    height: 5em;
-    margin-top: -0.1em;
-    margin-left: -0.5em;
-    margin-right: -0.5em;
+    padding-left: 3%;
+    padding-right: 3%;
+    min-height: 5em;
     background-color: rgb(240, 240, 240);
 }
 
+@media (max-width: 960px) {
+    .slide-menu {
+        display: block;
+    }
+
+    nav {
+        display: none;
+    }
+
+    .sponsors {
+        padding-left: 0%;
+        padding-right: 2%;
+    }
+
+    .sponsors > * {
+        padding: 2%;
+    }
+}
+
+@media (max-width: 1328px) {
+    .hero-title {
+        font-size: 2.5rem;
+    }
+
+    .hero-logo {
+        height: 4em;
+        width: 4em;
+    }
+
+    nav {
+        width: 35em;
+    }
+
+    .sponsors {
+        justify-content: space-around;
+    }
+}
+
+/*
 section.slide-categories {
     position: relative;
     margin-top: 0em;
@@ -112,19 +142,45 @@ section.slide-categories {
     flex-direction: column;
     gap: 10rem;
 }
+*/
+
+section.slide-categories {
+    background-image: url(../images/guitar-slide.jfif);
+    background-repeat:no-repeat;
+    background-position: center center;
+    background-size: cover;
+    border-top: solid 1px transparent;
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
+
+.slide-titles {
+    height: 100%;
+    line-height: 1em;
+}
 
 .category-description h1 {
+    /*
     margin-top: 1.5em;
     margin-left: 1em;
+    */
+    margin-left: 2%;
     color: white;
 }
 
 .category-description h2 {
+    /*
     margin-top: -1em;
     margin-left: 2em;
+    */
+    margin-left: 2%;
     color: white;
 }
 
+/*
 .slide-category-image {
     position: absolute;
     top: 0;
@@ -136,12 +192,18 @@ section.slide-categories {
     z-index: -1;
     transform: scaleX(-1);
 }
-
+*/
 .slide-icon {
     display: flex;
     justify-content: space-between;
-    margin-left: 1.5em;
-    margin-right: 1.5em;
+}
+
+.slide-image-1 {
+    padding: 1em;
+}
+
+.slide-image-2 {
+    padding: 2em;
 }
 
 .slide-category-image-a {
@@ -149,10 +211,10 @@ section.slide-categories {
 }
 
 .slide-ellipse {
-    margin-top: 8em;
     display: flex;
     justify-content: center;
     gap: 1.5rem;
+    margin-bottom: 2%;
 }
 
 section.about-us {
