--- a/Home Page - Gigs Initial Page/css/main.css
+++ b/Home Page - Gigs Initial Page/css/main.css
@@ -93,7 +93,81 @@ nav a {
     background-color: rgb(240, 240, 240);
 }
 
+.slide-categories {
+    background-image: url(../images/guitar-slide.jfif);
+    background-repeat:no-repeat;
+    background-position: center center;
+    background-size: cover;
+    border-top: solid 1px transparent;
+    width: 100vw;
+    min-height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
+
+.slide-categories > .category-description, .slide-icon, .slide-ellipse {
+    flex-basis: 9em;
+}
+
+.category-description {
+    line-height: 1em;
+}
+
+.category-description h1 {
+    margin-left: 2%;
+    color: white;
+}
+
+.category-description h2 {
+    margin-left: 2%;
+    color: white;
+}
+
+.slide-icon {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.slide-image-1 {
+    padding: 1em;
+}
+
+.slide-image-2 {
+    padding: 1em;
+}
+
+.slide-category-image-a {
+    transform: scaleX(-1);
+    width: 3em;
+    height: 3em;
+}
+
+.slide-category-image-b {
+    width: 3em;
+    height: 3em;
+}
+
+.slide-ellipse {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 2%;
+    gap: 1.5rem;
+}
+
+.slide-ellipse > * {
+    height: 1.2em;
+    width: 1.2em;
+}
+
 @media (max-width: 960px) {
+    header {
+        background-image: url(../images/hero-image-2.jpg);
+    }
+
     .slide-menu {
         display: block;
     }
@@ -109,6 +183,31 @@ nav a {
 
     .sponsors > * {
         padding: 2%;
+    }
+
+    .slide-categories {
+        background-image: url(../images/guitar-slide-2.jpg);
+    }
+
+    .category-description {
+        text-align: center;
+        padding: 1%;
+    }
+
+    .slide-categories h1 {
+        font-size: 3rem;
+    }
+
+    .slide-categories h2 {
+        font-size: 1.5rem;
+    }
+
+    .slide-image-1 {
+        padding: 0.5%;
+    }
+
+    .slide-ellipse {
+        padding: 6%;
     }
 }
 
@@ -131,91 +230,9 @@ nav a {
     }
 }
 
-/*
-section.slide-categories {
-    position: relative;
-    margin-top: 0em;
-    margin-left: -0.5em;
-    margin-right: -0.5em;
-    height: 90vh;
-    display: flex;
-    flex-direction: column;
-    gap: 10rem;
-}
-*/
 
-section.slide-categories {
-    background-image: url(../images/guitar-slide.jfif);
-    background-repeat:no-repeat;
-    background-position: center center;
-    background-size: cover;
-    border-top: solid 1px transparent;
-    height: 90vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    
-}
 
-.slide-titles {
-    height: 100%;
-    line-height: 1em;
-}
 
-.category-description h1 {
-    /*
-    margin-top: 1.5em;
-    margin-left: 1em;
-    */
-    margin-left: 2%;
-    color: white;
-}
-
-.category-description h2 {
-    /*
-    margin-top: -1em;
-    margin-left: 2em;
-    */
-    margin-left: 2%;
-    color: white;
-}
-
-/*
-.slide-category-image {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 90vh;
-    z-index: -1;
-    transform: scaleX(-1);
-}
-*/
-.slide-icon {
-    display: flex;
-    justify-content: space-between;
-}
-
-.slide-image-1 {
-    padding: 1em;
-}
-
-.slide-image-2 {
-    padding: 2em;
-}
-
-.slide-category-image-a {
-    transform: scaleX(-1);
-}
-
-.slide-ellipse {
-    display: flex;
-    justify-content: center;
-    gap: 1.5rem;
-    margin-bottom: 2%;
-}
 
 section.about-us {
     position: relative;
