--- a/Home Page - Gigs Initial Page/css/main.css
+++ b/Home Page - Gigs Initial Page/css/main.css
@@ -163,6 +163,56 @@ nav a {
     width: 1.2em;
 }
 
+.about-us {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 70vh;
+}
+
+.about-us > * {
+    flex-basis: 35vw;
+    flex-shrink: 0;
+}
+
+.about-us-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.about-us-titles h1 {
+    margin: 0;
+    margin-top: 1em;
+}
+
+.about-us-titles h2 {
+    margin: 0;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
+.paragraph {
+    text-align: justify;
+    text-justify: inter-word;
+    font-size: 1.2rem;
+}
+
+.button {
+    height: 2em;
+    width: 12em;
+    line-height: 34px;
+    padding: 0.5%;
+    margin-bottom: 3em;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #211DBF;
+    color: white;
+}
+
+.about-us-image {
+    text-align: end;
+}
+
 @media (max-width: 960px) {
     header {
         background-image: url(../images/hero-image-2.jpg);
@@ -209,6 +259,27 @@ nav a {
     .slide-ellipse {
         padding: 6%;
     }
+
+    .about-us {
+        flex-direction: column;
+        justify-content: space-between;
+        margin-left: 3em;
+        margin-right: 3em;
+        margin-bottom: 2em;
+    }
+
+    .about-us > * {
+        flex-basis: 50vh;
+    }
+
+    .about-us-titles {
+        text-align: center;
+    }
+
+    .about-us-button {
+        display: flex;
+        justify-content: center;
+    }
 }
 
 @media (max-width: 1328px) {
@@ -228,67 +299,10 @@ nav a {
     .sponsors {
         justify-content: space-around;
     }
-}
 
-
-
-
-
-section.about-us {
-    position: relative;
-    display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: 1fr;
-    align-items: center;
-    height: 80vh;
-    gap: 3em;
-    margin-left: -1em;
-    margin-right: -1em;
-    background-color: rgb(240, 240, 240);
-}
-
-
-.about-us-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex-basis: 0;
-    margin-top: -4em;
-    margin-left: 20em;
-    width: 35em;
-    height: 35em;
-    
-}
-
-.about-us-content h2 {
-    margin-top: -1.5em;
-}
-
-.paragraph {
-    margin-top: 0em;
-    text-align: justify;
-    text-justify: inter-word;
-}
-
-.button {
-    margin-top: 1.5em;
-    width: 8em;
-    height: 2em;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 34px;
-    background-color: #211DBF;
-    color: white;
-}
-
-.about-us-image{
-    text-align: center;
-    margin-right: 15em;
-}
-
-.about-us-image img {
-    width: 27em;
-    height: 27em;
+    .about-us {
+        justify-content: space-around;
+    }
 }
 
 section.why-MW {
