--- a/Home Page - Gigs Initial Page/css/main.css
+++ b/Home Page - Gigs Initial Page/css/main.css
@@ -3,7 +3,7 @@ body {
     width: 100vw;
     margin: 0;
     padding: 0;
-    /*overflow-x: hidden;*/
+    overflow-x: hidden;
 }
 
 .container {
@@ -40,7 +40,6 @@ header {
     display: flex;
     align-items: center;
     padding: 1.5%;
-
 }
 
 .hero-title {
@@ -104,7 +103,6 @@ nav a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
 }
 
 .slide-categories > .category-description, .slide-icon, .slide-ellipse {
@@ -167,6 +165,7 @@ nav a {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100vw;
     min-height: 70vh;
 }
 
@@ -213,9 +212,80 @@ nav a {
     text-align: end;
 }
 
+.why-MW {
+    background-image: url(../images/why-image.jpg);
+    background-repeat:no-repeat;
+    background-position: center center;
+    background-size: cover; 
+    width: 100vw;
+    min-height: 90vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.why-MW-reasons {
+    display: flex;
+    flex-direction: column;
+    margin-top: -3em;
+    margin-right: 12em;
+}
+
+.why-title {
+    height: 10em;
+}
+
+.reasons-list {
+    margin: 0;
+    padding: 0;
+}
+
+.reasons-list li {
+    list-style: none;
+}
+
+.reasons-list li p {
+    background-color: white;
+    height: 3em;
+    width: auto;
+    border-radius: 12px;
+    line-height: 45px;
+    margin-left: 0.5em;
+}
+
+.check {
+    display: flex;
+    align-items: center;
+    color: white;
+    
+}
+
+.check-image {
+    height:1.5em;
+    width: 1.5em;
+    padding: 1.5%;
+}
+
+section.discover-MW {
+    border-top: solid 1px transparent;
+    text-align: center;
+    min-height: 5em;
+    width: 100vw;
+    background-color: rgb(240, 240, 240);
+}
+
+.discover-MW h1 {
+    margin-top: 0.6em;
+    font-size: 2em;
+}
+
 @media (max-width: 960px) {
     header {
         background-image: url(../images/hero-image-2.jpg);
+    }
+
+    .title {
+        margin-left: 2em;
     }
 
     .slide-menu {
@@ -227,8 +297,7 @@ nav a {
     }
 
     .sponsors {
-        padding-left: 0%;
-        padding-right: 2%;
+        margin-left: 0.5em;
     }
 
     .sponsors > * {
@@ -263,28 +332,41 @@ nav a {
     .about-us {
         flex-direction: column;
         justify-content: space-between;
+        width: 85%;
         margin-left: 3em;
         margin-right: 3em;
         margin-bottom: 2em;
     }
-
-    .about-us > * {
-        flex-basis: 50vh;
-    }
-
+    
     .about-us-titles {
         text-align: center;
+    }
+
+    .paragraph {
+        padding: 3%;
     }
 
     .about-us-button {
         display: flex;
         justify-content: center;
     }
+
+    .why-title {
+        height: auto;
+    }
+
+    .why-title h1 {
+        font-size: 3em;
+    }
 }
 
 @media (max-width: 1328px) {
     .hero-title {
         font-size: 2.5rem;
+    }
+
+    .title {
+        margin-left: 1em;
     }
 
     .hero-logo {
@@ -300,75 +382,38 @@ nav a {
         justify-content: space-around;
     }
 
+    .category-description {
+        margin-left: 1em;
+    }
+
+    .slide-image-1 {
+        margin-left: 1em;
+    }
+
     .about-us {
         justify-content: space-around;
     }
+
+    .why-MW {
+        background-image: url(../images/why-image-2.jpg);
+        justify-content: center;
+    }
+
+    .why-MW > * {
+        margin: 0;
+        padding: 0;
+        margin-left: 1em;
+        margin-right: 1em;
+        margin-bottom: 1em;
+    }
+
+    .why-title h1 {
+        color: white;
+    }
 }
 
-section.why-MW {
-    position: relative;
-    margin-top: -0.1em;
-    margin-left: -1em;
-    margin-right: -1em;
-    height: 90vh;
-    border-top: solid 1px transparent;
-}
 
-.why-image {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 90vh;
-    z-index: -1;
-}
-
-.why-MW-reasons {
-    width: 25em;
-    margin-top: 9em;
-    margin-left: 80em;
-}
-
-.why-title h1 {
-    font-size: 2rem;
-    color: white;
-}
-
-.reasons {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-}
-
-.reasons h4 {
-    font-weight: 100;
-    color: white;
-}
-
-.reasons li p {
-    background-color: white;
-    height: 3em;
-    width: 20em;
-    border-radius: 12px;
-    line-height: 45px;
-}
-
-section.discover-MW {
-    border-top: solid 1px transparent;
-    text-align: center;
-    height: 5em;
-    margin-left: -0.5em;
-    margin-right: -0.5em;
-    background-color: rgb(240, 240, 240);
-}
-
-.discover-MW h1 {
-    margin-top: 0.6em;
-    font-size: 2em;
-}
-
+/*
 section.comments-section {
     position: relative;
     margin-top: -0.1em;
@@ -421,3 +466,4 @@ section.comments-section {
 .comment p {
     text-justify: inter-word;
 }
+*/
