--- a/Home Page - Gigs Initial Page/css/index.css
+++ b/Home Page - Gigs Initial Page/css/index.css
@@ -279,6 +279,45 @@ section.discover-MW {
     font-size: 2em;
 }
 
+.comments-section {
+    background-image: url(../images/comments-image.jpg);
+    background-repeat:no-repeat;
+    background-position: center center;
+    background-size: cover;
+    min-height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 5.5em;
+}
+
+.comments-section h1 {
+    margin-top: 1em;
+    margin-left: 1em;
+    color: white;
+}
+
+.people-comments {
+    display: flex;
+    justify-content: space-around;
+}
+
+.comment {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    height: 20em;
+    width: 12em;
+    border-radius: 20px;
+    padding: 2%;
+    background-color: white;
+}
+
+.comment p {
+    text-justify: inter-word;
+}
+
 @media (max-width: 960px) {
     header {
         background-image: url(../images/hero-image-2.jpg);
@@ -358,6 +397,33 @@ section.discover-MW {
     .why-title h1 {
         font-size: 3em;
     }
+
+    .comments-section {
+        justify-content: space-between;
+        align-items: center;
+        gap: 0;
+    }
+
+    .comments-title {
+        margin-right: 3em;
+    }
+
+    .comments-title h1 {
+        font-size: 3em;
+    }
+
+    .comment {
+        margin-bottom: 15em;
+        padding: 10%;
+    }
+
+    #comment-2 {
+        display: none;
+    }
+
+    #comment-3 {
+        display: none;
+    }
 }
 
 @media (max-width: 1328px) {
@@ -411,59 +477,3 @@ section.discover-MW {
         color: white;
     }
 }
-
-
-/*
-section.comments-section {
-    position: relative;
-    margin-top: -0.1em;
-    margin-left: -0.5em;
-    margin-right: -0.5em;
-    margin-bottom: -1em;
-    height: 90vh;
-    border-top: solid 1px transparent;
-}
-
-.comments-section h1 {
-    margin-top: 1em;
-    margin-left: 1em;
-    color: white;
-}
-
-.comments-image {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 90vh;
-    z-index: -1;
-}
-
-.people-comments {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 7em;
-}
-
-.comment {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
-    height: 20em;
-    width: 12em;
-    border-radius: 12px;
-    background-color: white;
-}
-
-.comment > * {
-    margin-top: 0.5em;
-    margin-left: 1em;
-}
-
-.comment p {
-    text-justify: inter-word;
-}
-*/
