--- a/Buy a Gig - Gigs Created - Gigs Purchased - Footer/css/my_gigs.css
+++ b/Buy a Gig - Gigs Created - Gigs Purchased - Footer/css/my_gigs.css
@@ -9,7 +9,7 @@
 	padding: 20px;
 	vertical-align: center;
 }
-.tables-links a{
+.tables-links .table-link{
 	color: black;
 	margin: 10px;
 }
@@ -18,6 +18,5 @@
 	padding: 5px;
 	background-color: #211DBF;
 	border-radius: 5px;
-	float: right;
 	color: white !important;
 }
