--- a/Home Page - Gigs Initial Page/css/allGigs.css
+++ b/Home Page - Gigs Initial Page/css/allGigs.css
@@ -8,14 +8,11 @@ body {
 
 nav{
     width: 100vw;
-    height: 100px;
+    min-height: 6em;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    margin-right: 2em;
-    
+    justify-content: space-around; 
     background-color: #fff;
-
 }
 
 a {
@@ -23,77 +20,72 @@ a {
     color: rgb(121, 121, 121);
 }
 
+.main-title-class {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .main-title {
     font-family: 'Piedra';
     font-size: 3rem;
-    margin-left: -1em;
     color: #211DBF;
 }
 
 .main-logo {
-    display:inline-block;
-    vertical-align: bottom;
     height: 5em;
     width: 5em;
 }
 
-.logo{
-    width: 280px;
-}
-
-.search-container{
+.search-container {
     display: flex;
+    justify-content: center;
+    align-items: center;
     border: 1px solid rgb(206, 206, 206);
     border-radius: 2px;
-    height: 30px;
-    align-items: center;
-    width: 400px;
-    
+    height: 2.5em;
 }
 
-.search-container span{
-    margin-left: 5px;
-}
-
-.search-btn{
-    background-color: blue;
-    height: 100%;
-}
-
-.search-container .search-btn button{
-    border: none;
-    background-color: blue;
-    color: #fff;
-    width: 70px;
-    cursor: pointer;
+.Lupa-Search {
     padding: 0.5em;
 }
 
 .search{
     border: none;
     outline: none;
-    min-width: 200px;
-    margin-left: 10px;
-    padding-right: 10px;
-    width: 300px;
+    width: 18em;
 }
 
-.user{
-    font-size: 35px;
+.search-btn{
+    background-color: #211DBF;
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
-.navigation{
+
+.search-btn button{
+    border: none;
+    background-color: #211DBF;
+    color: #fff;
+    font-size: 1.1rem;
+    width: 6em;
+    cursor: pointer;
+    padding: 0.5em;
+}
+
+.navigation {
+    width: 30em;
     display: flex;
     justify-content: space-between;
-    width: 350px;
-}
-
-.navigation a{
-    text-decoration: none;
-    color: rgb(121, 121, 121);
+    align-items: center;
 }
 
 .navigation a:last-child{
-    color: rgb(50, 0, 233);
+    color: #211DBF;
+}
+
+.nav-user-logo {
+    margin-right: 2em;
 }
 
 .categories {
@@ -159,6 +151,18 @@ a {
     margin-bottom: 3em;
 }
 
+.part-1 {
+    width: 50vw;
+    display: flex;
+    justify-content: space-around;
+}
+
+.part-2 {
+    width: 50vw;
+    display: flex;
+    justify-content: space-around;
+}
+
 .gig {
     display: flex;
     flex-direction: column;
@@ -220,3 +224,123 @@ a {
     width: 1.5em;
     height: 1.5em;
 }
+
+@media (max-width: 960px) {
+
+    .gigs-container {
+        height: 210vh;
+        margin-top: 0;
+        margin-bottom: 0;
+        justify-content: center;
+        align-items: center;
+    }
+    .part-1 {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 4rem;
+        margin-right: 4em;
+    }
+
+    .part-2 {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 4rem;
+        margin-right: 4em;
+    }
+
+    .gig {
+        width: 18em;
+    }
+}
+
+@media (max-width: 1328px) {
+    /*
+    #gig-1 {
+        display: none;
+    }
+
+    #gig-2 {
+        display: none;
+    }
+    */
+    .gigs-container {
+        flex-direction: column;
+        width: 100vw;
+        min-height: 110vh;
+        justify-content: space-around;
+    }
+
+    .part-1 {
+        width: 100vw;
+        height: 50vh;
+    }
+
+    .part-2 {
+        width: 100vw;
+        height: 50vh;
+    }
+
+
+}
+/*
+.logo{
+    width: 280px;
+}
+
+.search-container{
+    display: flex;
+    border: 1px solid rgb(206, 206, 206);
+    border-radius: 2px;
+    height: 30px;
+    align-items: center;
+    width: 400px;
+    
+}
+
+.search-container span{
+    margin-left: 5px;
+}
+
+.search-btn{
+    background-color: blue;
+    height: 100%;
+}
+
+.search-container .search-btn button{
+    border: none;
+    background-color: blue;
+    color: #fff;
+    width: 70px;
+    cursor: pointer;
+    padding: 0.5em;
+}
+
+.search{
+    border: none;
+    outline: none;
+    min-width: 200px;
+    margin-left: 10px;
+    padding-right: 10px;
+    width: 300px;
+}
+
+.user{
+    font-size: 35px;
+}
+.navigation{
+    display: flex;
+    justify-content: space-between;
+    width: 350px;
+}
+
+.navigation a{
+    text-decoration: none;
+    color: rgb(121, 121, 121);
+}
+
+.navigation a:last-child{
+    color: rgb(50, 0, 233);
+}
+*/
