--- a/Buy a Gig - Gigs Created - Gigs Purchased - Footer/css/app.css
+++ b/Buy a Gig - Gigs Created - Gigs Purchased - Footer/css/app.css
@@ -23,6 +23,11 @@ a {
     color: rgb(121, 121, 121);
 }
 
+p{
+    overflow-wrap: break-word;
+    white-space: break-spaces;
+}
+
 .main-title {
     font-family: 'Piedra';
     font-size: 3rem;
@@ -96,49 +101,57 @@ a {
     color: rgb(50, 0, 233);
 }
 *{
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 a{
-	text-decoration: none;
+    text-decoration: none;
 }
 .social-logo{
-	width: 32px;
+    width: 32px;
 }
 .p-5px{
-	padding: 5px;
+    padding: 5px;
 }
 .display-flex{
-	display: flex;
+    display: flex;
 }
 .width-100{
-	width: 100%;
+    width: 100%;
 }
 .width-60{
-	width: 60%;
+    width: 60%;
 }
 .width-50{
-	width: 50%;
+    width: 50%;
 }
 .width-40{
-	width: 40%;
+    width: 40%;
 }
 .width-30{
-	width: 30%;
+    width: 30%;
 }
 .width-15{
-	width: 15%;
+    width: 15%;
 }
 .margin{
-	margin-top: 20px;
+    margin-top: 20px;
 }
 
 .line{
-	width: 100%;
-	border-top: 1px solid #ddd;
+    width: 100%;
+    border-top: 1px solid #ddd;
 }
 
 .display-inline-block{
-	display: inline-block;
+    display: inline-block;
+}
+
+.text-left{
+    text-align: left;
+}
+
+.white-space-nowrap{
+    white-space: nowrap;
 }
