--- a/Buy a Gig - Gigs Created - Gigs Purchased - Footer/css/responsive.css
+++ b/Buy a Gig - Gigs Created - Gigs Purchased - Footer/css/responsive.css
@@ -55,11 +55,12 @@
 
 	.table-image{
 		width: 100%;
-    	padding: 5px 20px;
+    	padding: 1vw;
 	}
 
 	.table-image-wrapper{
 		padding: 0 !important;
+		width: 16%;
 	}
 
 	.fixed-resp{
@@ -83,6 +84,10 @@
 	}
 
 	.col-2-30, .col-2-50{
+		width: 100%;
+	}
+
+	.table-image-wrapper{
 		width: 100%;
 	}
 }
