--- a/Home Page - Gigs Initial Page/css/register.css
+++ b/Home Page - Gigs Initial Page/css/register.css
@@ -41,13 +41,18 @@ form {
 }
 
 .form-field {
+    height: 20%;
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .form-field input{
     width: 60%;
+    height: 2em;
+    border: 1px solid rgb(211, 211, 211);
+    border-radius: 5px;
 }
 
 .form-field-last {
@@ -88,7 +93,12 @@ form {
 
     form {
         width: 100%;
+        margin: 0;
+        margin-top: 7%;
+        padding: 2%;
         align-items: center;
+        border: 2px solid rgb(211, 211, 211);
+        border-radius: 7px;
     }
 
     .form-field {
