Change , added Create- gig page

--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -19,7 +19,7 @@
     <a routerLink="/buy-gig">(TEMP) Buy gig</a>
     <a routerLink="/my-gigs">MisGigs</a>
     <a routerLink="/my-orders">Orders</a>
-    <a href="">Create a Gig</a>
+    <a routerLink="/create-gig">Create a Gig</a>
   </div>
 
   <img src="assets/images/user-icon.png" alt="User Icon" class="user-icon">
