added messages page, still many modifications to do but its more or less

--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -15,8 +15,8 @@
   </div>
 
   <div class="navigation">
-    <a href="">Messages</a>
-    <a routerLink="/buy-gig">(TEMP) Buy gig</a>
+    <a routerLink="/messages">Messages</a>
+    <a routerLink="/buy-gig">Buy gig</a>
     <a routerLink="/my-gigs">MisGigs</a>
     <a routerLink="/my-orders">Orders</a>
     <a routerLink="/create-gig">Create a Gig</a>
