Finished adding all my pages and started with validations so they work in angular

--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -22,7 +22,8 @@
     <a routerLink="/create-gig">Create a Gig</a>
   </div>
 
-  <img src="assets/images/user-icon.png" alt="User Icon" class="user-icon">
+  <a routerLink="/login"><img src="assets/images/user-icon.png" alt="User Icon" class="user-icon"></a>
+  
 </nav>
 
 <div class="wrapper">
