--- a/Angular/src/app/buy-gig-contact-form/buy-gig-contact-form.component.html
+++ b/Angular/src/app/buy-gig-contact-form/buy-gig-contact-form.component.html
@@ -12,7 +12,7 @@
           <label for="email" class="form-label">Email</label><br>
           <input formControlName="email" type="email" name="email" id="email">
         </div>
-        <div>
+        <div>ľ
           <label for="phone" class="form-label">Phone no.</label><br>
           <input formControlName="phone" type="text" name="phone" id="phone">
         </div>
