--- a/Angular/src/app/login/login.component.css
+++ b/Angular/src/app/login/login.component.css
@@ -79,7 +79,7 @@ form {
     align-items: center;
 }
 
-.login-button input {
+.login-button button {
     width: 100%;
     height: 70%;
     color: #FFFF;
