--- a/Angular/src/app/my-gigs/my-gigs.component.html
+++ b/Angular/src/app/my-gigs/my-gigs.component.html
@@ -13,7 +13,7 @@
     <a href="javascript:void(0);" (click)="filterStatus('paused')" class="table-link">Paused</a>
     <a href="javascript:void(0);" (click)="filterStatus()" class="table-link">All</a>
     <div class="float-right-resp" style="padding: 10px;">
-      <a href="#" class="create-gig">Create new gig</a>
+      <a href="javascript:void(0);" class="create-gig">Create new gig</a>
     </div>
   </div>
 
