--- a/Angular/src/app/header/header.component.html
+++ b/Angular/src/app/header/header.component.html
@@ -1,35 +1,33 @@
-<div class="container">
-    <nav>
-        <a href="#" class="main-title-class">
-            <h1 class="main-title">Music World</h1>
-            <img src="../assets/images/header/Music World Logo Blue.svg" alt="MWLogo" class="main-logo">
-        </a>
+<nav>
+    <a routerLink="/allGigs" class="main-title-class">
+        <h1 class="main-title">Music World</h1>
+        <img src="../assets/images/header/Music World Logo Blue.svg" alt="MWLogo" class="main-logo">
+    </a>
+    
+    <div class="search-container">
+        <img src="../assets/images/header/Lupa.png" alt="Lupa Search" class="Lupa-Search">
         
-        <div class="search-container">
-            <img src="../assets/images/header/Lupa.png" alt="Lupa Search" class="Lupa-Search">
-            
-            <input type="text" class="search">
-        
-            <div class="search-btn">
-            <button>Search</button>
-        </div>
-        </div>
+        <input type="text" class="search">
+    
+        <div class="search-btn">
+        <button>Search</button>
+    </div>
+    </div>
 
-        <div class="navigation">
-            <a routerLink="/messages">All Gigs</a>
-            <a routerLink="/messages">Messages</a>
-            <!--a routerLink="/buy-gig/:id">Buy gig</a-->
-            <a routerLink="/my-gigs">My Gigs</a>
-            <a routerLink="/my-orders">Orders</a>
-            <a routerLink="/create-gig">Create a Gig</a>
-        </div>
-        
-        <div class="nav-user-logo">
-            <a routerLink="/login"><img src="assets/images/user-icon.png" alt="User Icon" class="user-icon"></a>
-        </div>
+    <div class="navigation">
+        <a routerLink="/allGigs">All Gigs</a>
+        <a routerLink="/messages">Messages</a>
+        <!--a routerLink="/buy-gig/:id">Buy gig</a-->
+        <a routerLink="/my-gigs">My Gigs</a>
+        <a routerLink="/my-orders">Orders</a>
+        <a routerLink="/create-gig">Create a Gig</a>
+    </div>
+    
+    <div class="nav-user-logo">
+        <a routerLink="/login"><img src="assets/images/user-icon.png" alt="User Icon" class="user-icon"></a>
+    </div>
 
-        <div class="slide-menu">
-            <div class="fas fa-bars"></div>
-        </div>
-    </nav>
-</div>
+    <div class="slide-menu">
+        <div class="fas fa-bars"></div>
+    </div>
+</nav>
