Load allGigs from firebase

--- a/Angular/src/app/all-gigs/all-gigs.component.html
+++ b/Angular/src/app/all-gigs/all-gigs.component.html
@@ -43,102 +43,12 @@
 
     <div class="gigs-container">
 
-        <div class="gig-inline-block">
+        <div class="gig-inline-block" *ngFor="let gig of gigs" >
             <div class="gig">
-                <img src="../assets/images/all-gigs/gig1.png" alt="Gig 1 Image" class="gig-image">
+                <img src="{{gig.image}}" alt="Gig 1 Image" class="gig-image">
 
                 <div class="user-gig">
                     <img src="../assets/images/all-gigs/gig1-profile.png" alt="Gig 1 Profile" class="gig-image-profile">
-                    <p class="user-gig-name">remonbeeftink</p>
-                </div>
-
-                <div class="gig-description">
-                    <p class="gig-description-p">I will write and produce you amazing music for all your projects</p>
-                </div>
-            
-                <div class="rating">
-                    <img src="../assets/images/all-gigs/star.png" alt="Star">
-                    <p>4.9</p>
-                    <span>(85)</span>
-                </div>
-
-                <div class="like-price">
-                    <div class="heart-option">
-                        <img src="../assets/images/all-gigs/options-icon.png" alt="options-icon">
-                        <img src="../assets/images/all-gigs/heart-icon.png" alt="heart-icon">
-                    </div>
-
-                    <p>€27</p>
-                </div>
-            </div>
-        </div>    
-
-        <div class="gig-inline-block">
-            <div class="gig">
-                <img src="../assets/images/all-gigs/gig2.png" alt="Gig 1 Image" class="gig-image">
-
-                <div class="user-gig">
-                    <img src="../assets/images/all-gigs/gig2-profile.png" alt="Gig 1 Profile" class="gig-image-profile">
-                    <p class="user-gig-name">remonbeeftink</p>
-                </div>
-
-                <div class="gig-description">
-                    <p class="gig-description-p">I will write and produce you amazing music for all your projects</p>
-                </div>
-            
-                <div class="rating">
-                    <img src="../assets/images/all-gigs/star.png" alt="Star">
-                    <p>4.9</p>
-                    <span>(85)</span>
-                </div>
-
-                <div class="like-price">
-                    <div class="heart-option">
-                        <img src="../assets/images/all-gigs/options-icon.png" alt="options-icon">
-                        <img src="../assets/images/all-gigs/heart-icon.png" alt="heart-icon">
-                    </div>
-
-                    <p>€27</p>
-                </div>
-            </div>
-        </div>    
-
-        <div class="gig-inline-block">
-            <div class="gig">
-                <img src="../assets/images/all-gigs/gig3.png" alt="Gig 1 Image" class="gig-image">
-
-                <div class="user-gig">
-                    <img src="../assets/images/all-gigs/gig3-profile.png" alt="Gig 1 Profile" class="gig-image-profile">
-                    <p class="user-gig-name">remonbeeftink</p>
-                </div>
-
-                <div class="gig-description">
-                    <p class="gig-description-p">I will write and produce you amazing music for all your projects</p>
-                </div>
-            
-                <div class="rating">
-                    <img src="../assets/images/all-gigs/star.png" alt="Star">
-                    <p>4.9</p>
-                    <span>(85)</span>
-                </div>
-
-                <div class="like-price">
-                    <div class="heart-option">
-                        <img src="../assets/images/all-gigs/options-icon.png" alt="options-icon">
-                        <img src="../assets/images/all-gigs/heart-icon.png" alt="heart-icon">
-                    </div>
-
-                    <p>€27</p>
-                </div>
-            </div>
-        </div>    
-
-        <div class="gig-inline-block">
-            <div class="gig">
-                <img src="../assets/images/all-gigs/gig4.png" alt="Gig 1 Image" class="gig-image">
-
-                <div class="user-gig">
-                    <img src="../assets/images/all-gigs/gig4-profile.png" alt="Gig 1 Profile" class="gig-image-profile">
                     <p class="user-gig-name">remonbeeftink</p>
                 </div>
 
