--- a/Angular/src/app/home-page/home-page.component.html
+++ b/Angular/src/app/home-page/home-page.component.html
@@ -16,7 +16,7 @@
 
         <nav>
             <ul>
-                <li><a routerLink="/messages">Initial Page</a></li>
+                <li><a routerLink="/allGigs">Initial Page</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a routerLink="/login">Sign in</a></li>
                 <li><a href="#">Contact</a></li>
