--- a/Angular/src/app/footer/footer.component.html
+++ b/Angular/src/app/footer/footer.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="col-20">
       <div class="footer-logos" style="margin: auto;">
-        <a href="/"><img src="assets/images/logo.png" style="max-width: 200px;" alt="Music World - Logo"></a>
+        <a href="/"><img src="../assets/images/header/Music World Logo Blue.svg" style="max-width: 200px;" alt="Music World - Logo"></a>
         <a href="/"><img src="assets/images/logo-text.png" style="max-width: 200px;" alt="Music World - Logo text"></a>
       </div>
     </div>
