--- a/Angular/src/app/buy-gig/buy-gig.component.html
+++ b/Angular/src/app/buy-gig/buy-gig.component.html
@@ -26,7 +26,7 @@
           </div>
 
           <div class="margin text-left">
-            <img src="{{ gig.user_image }}" alt="" style="width: 32px; height: 32px; border-radius: 20px;">
+            <img src="assets/images/user-icon.png" alt="" style="width: 32px; height: 32px; border-radius: 20px;">
             <div style="display: inline-block;vertical-align: top;margin: 8px;">{{ gig.user_name }}</div>
           </div>
 
@@ -58,7 +58,7 @@
             <h3>About the seller</h3>
 
             <div class="margin text-left">
-              <img src="{{ gig.user_image }}" alt="" style="width: 32px; height: 32px; border-radius: 20px;">
+              <img src="assets/images/user-icon.png" alt="" style="width: 32px; height: 32px; border-radius: 20px;">
               <div class="display-inline-block margin" style="vertical-align: top; margin: 8px;">
                 {{ gig.user_name }}
               </div>
