Login con validación y comprobación en Firebase. Proyecto ordenado

--- a/Angular/src/app/home-page/home-page.component.css
+++ b/Angular/src/app/home-page/home-page.component.css
@@ -74,6 +74,10 @@ nav a {
     font-weight: bold;
 }
 
+nav a:hover {
+    color: #fff;
+}
+
 .sponsors {
     display: flex;
     justify-content: space-around;
