--- a/Angular/src/app/login/login.component.html
+++ b/Angular/src/app/login/login.component.html
@@ -5,16 +5,16 @@
         </div>
         
         <div class="signType">
-            <form  name="login" id="login" [formGroup]="loginForm" (submit)="submitLoginForm()">
+            <form  name="login" id="login" [formGroup]="loginForm" (submit)="sendit()">
                 <div class="login-field">
                     <label for="email">Email</label>
-                    <input formControlName= "email" type="email" id="email" name="email" placeholder="example@mail.com" autocomplete="new-text" 
+                    <input formControlName= "email" type="email" id="email" name="email" placeholder="example@mail.com" autocomplete="off" 
                     title="Email should correspond to the following format at least: example@mail.com" required>
                 </div>
             
                 <div class="login-field">
                     <label for="password">Password</label>
-                    <input formControlName= "password" type="password" id="password" name="password" placeholder="Password" autocomplete="new-text" pattern ="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" 
+                    <input formControlName= "password" type="password" id="password" name="password" placeholder="Password" autocomplete="off" pattern ="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" 
                     title="The password must contain at least 8 characters, a capital letter, and a number. (Letters and numbers only. Symbols are not allowed)." required>
                 </div>
 
@@ -29,7 +29,7 @@
                     </div>
                     
                     <div class="links">
-                        <a routerLink="">Forgot Password</a>
+                        <a routerLink="#">Forgot Password</a>
                         <a routerLink="/register">Create account</a>
 
 
