--- a/Angular/src/app/home-page/home-page.component.html
+++ b/Angular/src/app/home-page/home-page.component.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a routerLink="/allGigs">Initial Page</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="#about-us">About Us</a></li>
                 <li><a routerLink="/login">Sign in</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
@@ -59,7 +59,7 @@
         <!--img src="images/guitar-slide.jfif" alt="Slide Image" class="slide-category-image"-->
     </section>
 
-    <section class="about-us">
+    <section class="about-us" id="about-us">
         <div class="about-us-content">
             <div class="about-us-titles">
                 <h1>About Us</h1>
